<resources>
    <string name="app_name">烟草执法助手</string>
    <string name="front_name">烟草执法助手</string>
    <string name="badge_num">工号</string>
    <string name="password">密码</string>
    <string name="save_password">保存密码</string>
    <string name="login">登录</string>
    <string name="content_description">烟草logo</string>
    <string name="part_1">32位码归属地查询</string>
    <string name="part_2">条形码扫描</string>
    <string name="search">搜索</string>
    <string name="first16Name">请输入前16位编码</string>
    <string name="last16Name">请输入后16位编码</string>
    <string name="distributionDate">分拣日期</string>
    <string name="boxNo">件码</string>
    <string name="derivedCode">派生码</string>
    <string name="companyName">烟草公司</string>
    <string name="homeLocation">归属地</string>
    <string name="licenseKey">许可证号</string>
    <string name="unknown">未知</string>
    <string name="tobacco">烟草</string>
    <string name="dialog_title">Alert</string>
    <string name="license">许可证号：</string>
    <string name="retailer">零售户信息：</string>
    <string name="enterpriseName">企业（字号）名称：</string>
    <string name="address">经营地址：</string>
    <string name="handler">负责人（经营者）姓名：</string>
    <string name="contactNum">联系人电话：</string>
    <string name="contactName">联系人姓名：</string>
    <string name="IDNum">身份证号：</string>
    <string name="commerceNum">工商营业执照编号：</string>
    <string name="startDate">发证日期：</string>
    <string name="belongsTo">经营场地权属：</string>
    <string name="endDate">许可证截止期限：</string>
    <string name="status">当前状态：</string>
    <string name="title_activity_main">BMainActivity</string>
    <string name="captureButton">开始扫描</string>
    <string name="barCode">编码：</string>
    <string name="cigaretteName">名称：</string>
    <string name="wholeSalePrice">三批价：</string>
    <string name="suggestedPrice">建议零售价：</string>
    <string name="manufacturer">单位：</string>
    <string name="sellInBeijing">是否为北京在销卷烟：</string>
    <string name="DB1">全国卷烟在销名录</string>
    <string name="DB2">三统一系统条码库</string>
    <string name="DB3">质监站走私烟条码库</string>
    <string name="update">更新数据</string>
    <string name="print">打印</string>
    <string name="addNew">添加</string>
    <string name="enterInfo">现场执法信息录入</string>
    <string name="finish">完成</string>
    <string name="testEntry">测试</string>
    <string name="menu">菜单</string>
    <string name="character">案件性质</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
