<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="eu.long1.projectZero.FragmentA">

    <!-- TODO: Update blank fragment layout -->

    <com.mancj.materialsearchbar.MaterialSearchBar
        app:speechMode="false"
        app:hint="请输入卷烟后16位编码"
        app:maxSuggestionsCount="10"
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />

    <!--<com.rengwuxian.materialedittext.MaterialEditText-->
        <!--android:id="@+id/last16View"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_marginStart="31dp"-->
        <!--android:layout_marginTop="45dp"-->
        <!--android:hint="请输入后16位编码"-->
        <!--android:inputType="text"-->
        <!--android:maxLength="16"-->
        <!--app:met_baseColor="#085c53"-->
        <!--app:met_floatingLabel="normal"-->
        <!--app:met_floatingLabelTextColor="#222222"-->
        <!--app:met_textColor="#111111"-->
        <!--app:met_textColorHint="#AAAAAA" />-->

    <!--<Button-->
        <!--android:id="@+id/searchButton"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignBottom="@+id/last16View"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_marginEnd="55dp"-->
        <!--android:text="@string/search"-->
        <!--android:textAllCaps="false" />-->

    <TextView
        android:id="@+id/companyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/searchBar"
        android:layout_marginStart="36dp"
        android:layout_marginTop="97dp"
        android:text="@string/companyName"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/companyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/companyName"
        android:layout_alignBottom="@+id/companyName"
        android:layout_marginStart="35dp"
        android:layout_toEndOf="@+id/companyName"
        android:text="@string/unknown"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/companyName"
        android:layout_below="@+id/companyName"
        android:layout_marginTop="28dp"
        android:textSize="24sp"
        android:text="@string/homeLocation" />

    <TextView
        android:id="@+id/homeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/companyText"
        android:layout_alignTop="@+id/home"
        android:text="@string/unknown"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/license"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/home"
        android:layout_below="@+id/home"
        android:layout_marginTop="28dp"
        android:text="许可证号"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/licenseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/homeText"
        android:layout_alignTop="@+id/license"
        android:clickable="true"
        android:text="未知"
        android:textSize="23.5sp" />


</RelativeLayout>
